# kaggle_severstal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requitrements.txt
kaggle_severstal/: README.md
kaggle_severstal/src/: train_classifier.py
kaggle_severstal/src/augmentations/: aug_classification.py  custom_defect_blackout.py
kaggle_severstal/src/callbacks/: callbacks.py  discord_callbacks.py
kaggle_severstal/src/datamodules/: classification_datamodule.py
kaggle_severstal/src/datasets/: classification_dataset.py
kaggle_severstal/src/engines/: classifier.py
kaggle_severstal/src/models/: classification_models.py
kaggle_severstal/src/utils/: rle.py
notebooks/: kaggle_severstal.ipynb
src/: train_classfication.py
src/config_params/: binary_classification_01.yml  params_reader.py  sample.yml
src/dataloader/: classification_binary_dataloader.py
src/engine/: classification_engine.py
src/engine/base/: base_engine.py
src/helpers/: dataset_builder.py  rle_to_mask.py
