[project]
name = "kaggle-severstal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "hydra-core>=1.3.2",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
